fil_actor_decoder/tests/snapshots/verifreg_v17__calibnet_add_verified_client_exported_params.snap
---
source: fil_actor_decoder/tests/verifreg_v17.rs
expression: "decode_params(A, V, 3916220144, &decode_hex(hex)).unwrap()"
---
{
  "address": "f0163355",
  "allowance": "1048576"
}
