fil_actor_decoder/tests/snapshots/verifreg_v17__calibnet_add_verified_client_params.snap
---
source: fil_actor_decoder/tests/verifreg_v17.rs
expression: "decode_params(A, V, 4, &decode_hex(hex)).unwrap()"
---
{
  "address": "f3q5reevnaozjgnnlvtstxoxsl3cyd754gngljn6msaplriqfoyanvwy2rzx4sx6erqwhnvetvck6icpne4bwa",
  "allowance": "24000000000000"
}
