fil_actor_decoder/tests/snapshots/verifreg_v17__claim_allocations_params.snap
---
source: fil_actor_decoder/tests/verifreg_v17.rs
expression: "decode_params(A, V, 9, &to_vec(&p).unwrap()).unwrap()"
---
{
  "all_or_nothing": true,
  "sectors": [
    {
      "claims": [
        {
          "allocation_id": 9999,
          "client": 5678,
          "data": "baeaaaaa",
          "size": 34359738368
        }
      ],
      "expiry": 6000000,
      "sector": 100
    }
  ]
}
