fil_actor_decoder/tests/snapshots/verifreg_v17__extend_claim_terms_params.snap
---
source: fil_actor_decoder/tests/verifreg_v17.rs
expression: "decode_params(A, V, 11, &to_vec(&p).unwrap()).unwrap()"
---
{
  "terms": [
    {
      "claim_id": 5678,
      "provider": 1234,
      "term_max": 5256000
    }
  ]
}
