fil_actor_decoder/tests/snapshots/verifreg_v17__get_claims_params.snap
---
source: fil_actor_decoder/tests/verifreg_v17.rs
expression: "decode_params(A, V, 10, &to_vec(&p).unwrap()).unwrap()"
---
{
  "claim_ids": [
    100,
    200,
    300
  ],
  "provider": 1234
}
