fil_actor_decoder/tests/snapshots/verifreg_v17__mainnet_extend_claim_terms_return.snap
---
source: fil_actor_decoder/tests/verifreg_v17.rs
expression: "decode_return(A, V, 11, &decode_hex(hex)).unwrap()"
---
{
  "fail_codes": [],
  "success_count": 300
}
