fil_actor_decoder/tests/snapshots/verifreg_v17__mainnet_remove_expired_allocations_params.snap
---
source: fil_actor_decoder/tests/verifreg_v17.rs
expression: "decode_params(A, V, 8, &decode_hex(hex)).unwrap()"
---
{
  "allocation_ids": [],
  "client": 3161385
}
