fil_actor_decoder/tests/snapshots/verifreg_v17__remove_expired_claims_params.snap
---
source: fil_actor_decoder/tests/verifreg_v17.rs
expression: "decode_params(A, V, 12, &to_vec(&p).unwrap()).unwrap()"
---
{
  "claim_ids": [
    10,
    20,
    30
  ],
  "provider": 1234
}
