fil_actor_decoder/tests/snapshots/verifreg_v17__remove_expired_claims_return.snap
---
source: fil_actor_decoder/tests/verifreg_v17.rs
expression: "decode_return(A, V, 12, &to_vec(&r).unwrap()).unwrap()"
---
{
  "considered": [
    10,
    20,
    30
  ],
  "results": {
    "fail_codes": [
      {
        "code": 17,
        "idx": 2
      }
    ],
    "success_count": 2
  }
}
